# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "typedqliser"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Add formal type safety (10 levels, dependent/linear/session types) to any query language — SQL, GraphQL, Cypher, SPARQL, VQL"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/typedqliser"
keywords = ["type-safety", "sql", "graphql", "formal-verification", "query"]
categories = ["command-line-utilities", "database"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
walkdir = "2"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
